[agenda] Fix gap in time hover indicator

--- a/src/pretalx/static/agenda/scss/_agenda.scss
+++ b/src/pretalx/static/agenda/scss/_agenda.scss
@@ -160,7 +160,7 @@
               font-weight: bold;
               line-height: 1;
               padding: 8px 16px;
-              top: -46px;
+              top: -44px;
               white-space: nowrap;
             }
 
